# python-ddd

./: docker-compose.yml  pyproject.toml
infrastructure/persistence/database/: db.sql
interfaces/api/: Dockerfile  main.py
